2003-11-06  Pierre-Luc Paour <gallery@paour.com> (1.2-b14)

	* Almost complete rewrite of drag and drop code, fixing all the known bugs
	* Implemented cut-copy-paste for the list of pictures, so pictures can
	  now at long last be moved between albums (before upload)!
	* Fixed the QuickConfig preference not updating the other preference panels.
	  The fix is to close the preference dialog after QuickConfig is used, to
	  prevent conflicts.

2003-11-03  Pierre-Luc Paour <gallery@paour.com> (1.2-b13)

	* Better memory management for thumbnails and previews. Memory errors
	  should be rarer, and thumbnail/preview generation should be quicker.
	* Added button to sort files alphabetically in an album.
	* GR should now find jpegtran and ImageMagick in that if they are
	  available in the PATH on non-Windows platforms. Added a long-winded
	  warning at the tail-end of the installer about how to install them.

2003-10-30  Pierre-Luc Paour <gallery@paour.com> (1.2-b12)

	* Added warning when logging out or quitting and pictures are left in
	  a gallery, so no data is lost.
	* Updated bundled ImageMagick (windows only) to 5.5.7, added lib needed
	  for PNG images.
	* Fixed URL preferences getting lost.
	* Added disambiguation when 2 URLs for the same Gallery, but with different
	  usernames are present.
	* Fixed Quick Config losing the gallery type.

2003-10-09  Pierre-Luc Paour <gallery@paour.com> (1.2-b11)

	* Implemented patching mechanism for LAX file when the classpath
	  needs to be changed.
	* Build process can now update Menalto.com with the latest build information
	  so automated daily builds are automatically propagated. Also now pushing
	  beta builds to jpmullan.com.
	* Cosmetic changes to the Log class.

2003-10-06  Amedeo Paglione <apaglione@mac.com> (1.2-b10)

	* Adoption of more generic locale
	* Optimized the procedure for locale loading

2003-10-02  Pierre-Luc Paour <gallery@paour.com> (1.2-b9)

	* Better display for languages in the prefs dialog.