@@ -1,23 +1,23 @@
 /*
- *  Gallery Remote - a File Upload Utility for Gallery
- *
- *  Gallery - a web based photo album viewer and editor
- *  Copyright (C) 2000-2001 Bharat Mediratta
- *
- *  This program is free software; you can redistribute it and/or modify
- *  it under the terms of the GNU General Public License as published by
- *  the Free Software Foundation; either version 2 of the License, or (at
- *  your option) any later version.
- *
- *  This program is distributed in the hope that it will be useful, but
- *  WITHOUT ANY WARRANTY; without even the implied warranty of
- *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- *  General Public License for more details.
- *
- *  You should have received a copy of the GNU General Public License
- *  along with this program; if not, write to the Free Software
- *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- */
+*  Gallery Remote - a File Upload Utility for Gallery
+*
+*  Gallery - a web based photo album viewer and editor
+*  Copyright (C) 2000-2001 Bharat Mediratta
+*
+*  This program is free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or (at
+*  your option) any later version.
+*
+*  This program is distributed in the hope that it will be useful, but
+*  WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+*  General Public License for more details.
+*
+*  You should have received a copy of the GNU General Public License
+*  along with this program; if not, write to the Free Software
+*  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+*/
 package com.gallery.GalleryRemote.util;
 
 import com.gallery.GalleryRemote.GalleryFileFilter;
@@ -32,9 +32,7 @@ import com.drew.metadata.exif.ExifDirectory;
 
 import java.awt.*;
 import java.awt.geom.AffineTransform;
-import java.io.File;
-import java.io.IOException;
-import java.io.FileNotFoundException;
+import java.io.*;
 import java.util.Enumeration;
 import java.util.Vector;
 
@@ -49,7 +47,7 @@ import javax.swing.ImageIcon;
 
 public class ImageUtils {
 	public static final String MODULE = "ImageUtils";
-	
+
 	static Vector toDelete = new Vector();
 	static long totalTime = 0;
 	static int totalIter = 0;
@@ -68,10 +66,10 @@ public class ImageUtils {
 	public static final int THUMB = 0;
 	public static final int PREVIEW = 1;
 	public static final int UPLOAD = 2;
-	
+
 	static String[] filterName = new String[3];
 	static String[] format = new String[3];
-	
+
 	public final static String DEFAULT_IMAGE = "img/default.gif";
 	public final static String UNRECOGNIZED_IMAGE = "img/default.gif";
 
@@ -87,65 +85,55 @@ public class ImageUtils {
 	public static ImageIcon load( String filename, Dimension d, int usage ) {
 		ImageIcon r = null;
 		long start = System.currentTimeMillis();
-		
+
 		if ( ! GalleryFileFilter.canManipulate(filename) ) {
 			return unrecognizedThumbnail;
 		}
-		
+
 		if (useIM) {
-			try {
-				StringBuffer cmdline = new StringBuffer(imPath);
+			StringBuffer cmdline = new StringBuffer(imPath);
 
-				cmdline.append(" -size ").append(d.width).append("x").append(d.height);
+			cmdline.append(" -size ").append(d.width).append("x").append(d.height);
 
-				if (filterName[usage] != null && filterName[usage].length() > 0) {
-					cmdline.append(" -filter ").append(filterName[usage]);
-				}
-				
-				cmdline.append(" \"").append(filename).append("\"");
+			if (filterName[usage] != null && filterName[usage].length() > 0) {
+				cmdline.append(" -filter ").append(filterName[usage]);
+			}
 
-				cmdline.append(" -resize \"").append(d.width).append("x").append(d.height).append("\"");
+			cmdline.append(" \"").append(filename).append("\"");
 
-				cmdline.append(" +profile \"*\" ");
+			cmdline.append(" -resize \"").append(d.width).append("x").append(d.height).append("\"");
 
-				File temp = deterministicTempFile("thumb", "." + format[usage], tmpDir, filename + d);
+			cmdline.append(" +profile \"*\" ");
 
-				if (! temp.exists()) {
-					toDelete.add(temp);
+			File temp = deterministicTempFile("thumb", "." + format[usage], tmpDir, filename + d);
 
-					cmdline.append("\"" +temp.getPath() + "\"");
+			if (! temp.exists()) {
+				toDelete.add(temp);
 
-					Log.log(Log.LEVEL_TRACE, MODULE, "Executing " + cmdline.toString());
+				cmdline.append("\"" +temp.getPath() + "\"");
 
-					Process p = Runtime.getRuntime().exec(cmdline.toString());
-					int exitValue = p.waitFor();
-					Log.log(Log.LEVEL_TRACE, MODULE, "Returned with value " + exitValue);
+				int exitValue = exec(cmdline.toString());
 
-					if (exitValue != 0 && ! imIgnoreErrorCode) {
-						Log.log(Log.LEVEL_CRITICAL, MODULE, "ImageMagick doesn't seem to be working. Disabling");
-						useIM = false;
-					} else {
-						r = new ImageIcon(temp.getPath());
-					}
+				if (exitValue != 0 && ! imIgnoreErrorCode) {
+					Log.log(Log.LEVEL_CRITICAL, MODULE, "ImageMagick doesn't seem to be working. Disabling");
+					useIM = false;
 				} else {
 					r = new ImageIcon(temp.getPath());
 				}
-			} catch (IOException e1) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e1);
-			} catch (InterruptedException e2) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e2);
+			} else {
+				r = new ImageIcon(temp.getPath());
 			}
 		}
 
 		if ( ! useIM && r == null ) {
 			r = new ImageIcon( filename );
-		
+
 			Image scaled = null;
 			Dimension newD = getSizeKeepRatio(
-				new Dimension( r.getIconWidth(), r.getIconHeight() ),
-				d );
+					new Dimension( r.getIconWidth(), r.getIconHeight() ),
+					d );
 			scaled = r.getImage().getScaledInstance( newD.width, newD.height, Image.SCALE_FAST );
-	
+
 			r.getImage().flush();
 			r.setImage( scaled );
 		}
@@ -157,7 +145,7 @@ public class ImageUtils {
 
 		return r;
 	}
-	
+
 	public static File resize( String filename, Dimension d ) {
 		File r = null;
 		long start = System.currentTimeMillis();
@@ -185,26 +173,20 @@ public class ImageUtils {
 				cmdline.append(" -quality ").append(jpegQuality);
 
 				r = File.createTempFile("res"
-					, "." + GalleryFileFilter.getExtension(filename), tmpDir);
+						, "." + GalleryFileFilter.getExtension(filename), tmpDir);
 				toDelete.add(r);
 
 				cmdline.append(" \"").append(r.getPath()).append("\"");
 
-				Log.log(Log.LEVEL_TRACE, MODULE, "Executing " + cmdline.toString());
-
-				Process p = Runtime.getRuntime().exec(cmdline.toString());
-				int exitValue = p.waitFor();
-				Log.log(Log.LEVEL_TRACE, MODULE, "Returned with value " + exitValue);
+				int exitValue = exec(cmdline.toString());
 
 				if (exitValue != 0 && ! imIgnoreErrorCode) {
 					Log.log(Log.LEVEL_CRITICAL, MODULE, "ImageMagick doesn't seem to be working. Disabling");
 					useIM = false;
 					r = null;
 				}
-			} catch (IOException e1) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e1);
-			} catch (InterruptedException e2) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e2);
+			} catch (IOException e) {
+				Log.logException(Log.LEVEL_ERROR, MODULE, e);
 			}
 		}
 
@@ -239,12 +221,10 @@ public class ImageUtils {
 				}
 
 				/*if (resetExifOrientation) {
-					resetExifOrientation(filename);
+				resetExifOrientation(filename);
 				}*/
 			} catch (IOException e1) {
 				Log.logException(Log.LEVEL_ERROR, MODULE, e1);
-			} catch (InterruptedException e2) {
-				Log.logException(Log.LEVEL_ERROR, MODULE, e2);
 			}
 		}
 
@@ -255,7 +235,7 @@ public class ImageUtils {
 		return r;
 	}
 
-	private static File jpegtranExec(String filename, String command) throws IOException, InterruptedException {
+	private static File jpegtranExec(String filename, String command) throws IOException {
 		File r;
 		StringBuffer cmdline = new StringBuffer(jpegtranPath);
 
@@ -263,19 +243,15 @@ public class ImageUtils {
 
 		cmdline.append(command);
 
-		cmdline.append(" \"").append(filename).append("\"");
-
 		r = File.createTempFile("rot"
-			, "." + GalleryFileFilter.getExtension(filename), tmpDir);
+				, "." + GalleryFileFilter.getExtension(filename), tmpDir);
 		toDelete.add(r);
 
-		cmdline.append(" \"").append(r.getPath()).append("\"");
+		cmdline.append(" -outfile \"").append(r.getPath()).append("\"");
 
-		Log.log(Log.LEVEL_TRACE, MODULE, "Executing " + cmdline.toString());
+		cmdline.append(" \"").append(filename).append("\"");
 
-		Process p = Runtime.getRuntime().exec(cmdline.toString());
-		int exitValue = p.waitFor();
-		Log.log(Log.LEVEL_TRACE, MODULE, "Returned with value " + exitValue);
+		int exitValue = exec(cmdline.toString());
 
 		if (exitValue != 0 && ! jpegtranIgnoreErrorCode) {
 			Log.log(Log.LEVEL_CRITICAL, MODULE, "jpegtran doesn't seem to be working. Disabling");
@@ -424,23 +400,28 @@ public class ImageUtils {
 
 	static {
 		tmpDir = new File(System.getProperty("java.io.tmpdir"), "thumbs");
-		
+
 		if (!tmpDir.exists()) {
 			tmpDir.mkdirs();
 		}
-		
+
 		Log.log(Log.LEVEL_INFO, MODULE, "tmpDir: " + tmpDir.getPath());
 
 		// Making sure ImageMagick works
 		try {
-			PropertiesFile p = new PropertiesFile("imagemagick/im");
-			
+			PropertiesFile p = null;
+			if (new File("imagemagick/im.properties").exists()) {
+				p = new PropertiesFile("imagemagick/im");
+			} else {
+				p = new PropertiesFile("im");
+			}
+
 			useIM = p.getBooleanProperty("enabled");
 			Log.log(Log.LEVEL_INFO, MODULE, "useIM: " + useIM);
 			if (useIM) {
 				imPath = p.getProperty("imConvertPath");
 				Log.log(Log.LEVEL_INFO, MODULE, "imPath: " + imPath);
-				
+
 				imIgnoreErrorCode = p.getBooleanProperty("ignoreErrorCode", imIgnoreErrorCode);
 				Log.log(Log.LEVEL_INFO, MODULE, "imIgnoreErrorCode: " + imIgnoreErrorCode);
 
@@ -452,7 +433,7 @@ public class ImageUtils {
 					useIM = false;
 				}
 			}
-			
+
 			if (useIM) {
 				filterName[THUMB] = p.getProperty("imThumbnailResizeFilter");
 				filterName[PREVIEW] = p.getProperty("imPreviewResizeFilter");
@@ -473,18 +454,23 @@ public class ImageUtils {
 		}
 
 		defaultThumbnail = load(
-			DEFAULT_IMAGE,
-			GalleryRemote.getInstance().properties.getThumbnailSize(),
-			THUMB );
-			
+				DEFAULT_IMAGE,
+				GalleryRemote.getInstance().properties.getThumbnailSize(),
+				THUMB );
+
 		unrecognizedThumbnail = load(
-			UNRECOGNIZED_IMAGE,
-			GalleryRemote.getInstance().properties.getThumbnailSize(),
-			THUMB );
+				UNRECOGNIZED_IMAGE,
+				GalleryRemote.getInstance().properties.getThumbnailSize(),
+				THUMB );
 
 		// Making sure jpegtran works
 		try {
-			PropertiesFile p = new PropertiesFile("jpegtran/jpegtran");
+			PropertiesFile p = null;
+			if (new File("jpegtran/jpegtran.properties").exists()) {
+				p = new PropertiesFile("jpegtran/jpegtran");
+			} else {
+				p = new PropertiesFile("jpegtran");
+			}
 
 			useJpegtran = p.getBooleanProperty("enabled");
 			Log.log(Log.LEVEL_INFO, MODULE, "useJpegtran: " + useJpegtran);
@@ -509,7 +495,7 @@ public class ImageUtils {
 		}
 	}
 
-	
+
 	public static void purgeTemp()
 	{
 		Enumeration e = toDelete.elements();
@@ -521,10 +507,10 @@ public class ImageUtils {
 	public static Dimension getSizeKeepRatio(Dimension source, Dimension target)
 	{
 		Dimension result = new Dimension();
-		
+
 		float sourceRatio = (float) source.width / source.height;
 		float targetRatio = (float) target.width / target.height;
-		
+
 		if (targetRatio > sourceRatio)
 		{
 			result.height = target.height;
@@ -538,12 +524,12 @@ public class ImageUtils {
 
 		return result;
 	}
-	
+
 	public static float getRatio(Dimension source, Dimension target)
 	{
 		float widthRatio = (float) target.width / source.width;
 		float heightRatio = (float) target.height / source.height;
-		
+
 		if (heightRatio > widthRatio)
 		{
 			return widthRatio;
@@ -570,5 +556,37 @@ public class ImageUtils {
 		}
 
 		return new File(directory, prefix + hash.hashCode() + suffix);
+	}
+
+	public static int exec(String cmdline) {
+		Log.log(Log.LEVEL_TRACE, MODULE, "Executing " + cmdline.toString());
+
+		try {
+			Process p = Runtime.getRuntime().exec(cmdline.toString());
+
+			DataInputStream out = new DataInputStream(new BufferedInputStream(p.getInputStream()));
+			DataInputStream err = new DataInputStream(new BufferedInputStream(p.getErrorStream()));
+
+			int exitValue = p.waitFor();
+
+			String line = null;
+			while ((line = out.readLine()) != null) {
+				Log.log(Log.LEVEL_TRACE, MODULE, "Out: " + line);
+			}
+
+			while ((line = err.readLine()) != null) {
+				Log.log(Log.LEVEL_TRACE, MODULE, "Err: " + line);
+			}
+
+			Log.log(Log.LEVEL_TRACE, MODULE, "Returned with value " + exitValue);
+
+			return exitValue;
+		} catch (InterruptedException e) {
+			Log.logException(Log.LEVEL_ERROR, MODULE, e);
+		} catch (IOException e) {
+			Log.logException(Log.LEVEL_ERROR, MODULE, e);
+		}
+
+		return 1;
 	}
 }
