@@ -127,6 +127,6 @@ classpath=GalleryRemote.jar;lib/JSX1.0.7.4.jar;lib/metadata-extractor-2.1.jar;la
 #
 # --- Do not edit below this line ---
 #
-version=1.2-b14
-releaseDate=2003/11/06
+version=1.2-b15
+releaseDate=2003/11/09
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\nAmedeo Paglione\nChris Schwerdt\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJSX\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor
