@@ -1,3 +1,12 @@
+2003-11-09  Pierre-Luc Paour <gallery@paour.com> (1.2-b15)
+
+	* Fixed jpegtran execution on platforms other than Win32 (bad command line)
+	* Added more debug when executing external commands (now prints stdout and stderr
+	  from external command to log).
+	* For Mac build, added im.properties and jpegtran.properties to img.jar
+	  so Mac app can be completely self-contained.
+	* thanks to Amedeo Paglione for suggesting above fixes.
+
 2003-11-06  Pierre-Luc Paour <gallery@paour.com> (1.2-b14)
 
 	* Almost complete rewrite of drag and drop code, fixing all the known bugs
